# jamono-sre

./: .gitignore  README.md  docker-compose.prod.yml
.github/workflows/: deploy.yml
backend/: .env  Makefile  agent_log_reader_v1.py  agent_tbshoot.py  api.py  audit.py  dashboard.py  database.py  incidents.py  knowledge_base.py  main.py  models.py  monitor.py  pyproject.toml  settings.py  slack_service.py  sre_memory.db  team.py  test-modules.py  watcher.py
backend/agents/: __init__.py  k8s_specialist.py  network_specialist.py  supervisor.py
backend/integrations/: __init__.py  base.py  jira_provider.py  manager.py  registry.py  teams_provider.py
backend/manifests/: crashpod.yaml  deploy-crash-app.yaml  safe-pod.yaml
backend/tools/: __init__.py  k8s_core.py  k8s_remediation.py  network_core.py
backend/utils/: k8s_handler.py  llm_factory.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CopilotDrawer.tsx  KanbanBoard.tsx  Modal.tsx  PodCard.tsx  RemediationModal.tsx  ScanTriage.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/src/pages/: Clusters.tsx  Dashboard.tsx  History.tsx  IncidentDetail.tsx  Incidents.tsx  Integrations.tsx  ScanHistoryPage.tsx  Settings.tsx  Team.tsx
frontend/src/types/: index.ts
nginx/: jamono.conf
traefik/: docker-compose.yml  traefik.yml
