[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.2",
    "kubernetes>=35.0.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "slack-sdk>=3.40.1",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
